[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samsung_widgets"
version = "0.1.0"
description = "Samsung-themed widgets for CustomTkinter"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "maxmartin0"}
]
urls = { homepage = "https://github.com/maxmartin0/SamsungWidgetsLibrary" }

}
dependencies = ["customtkinter>=5.0"]
keywords = ["tkinter", "customtkinter", "widgets", "samsung", "GUI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
